--- a/Practica_1/.classpath
+++ b/Practica_1/.classpath
@@ -6,6 +6,12 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/EclipsePEV"/>
+	<classpathentry kind="lib" path="lib/jmathplot.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.core.commands_3.9.200.v20180827-1727.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.e4.core.commands_0.12.400.v20181119-1026.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.equinox.common_3.10.200.v20181021-1645.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.jface_3.15.0.v20181123-1505.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.ui.forms_3.7.400.v20181123-1505.jar"/>
+	<classpathentry kind="lib" path="lib/swt.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
