--- a/Practica_1/.project
+++ b/Practica_1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Practica_1</name>
+	<name>PEV</name>
 	<comment></comment>
 	<projects>
 	</projects>
